src/traefik/whoami-ingressroute/template/whoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-${WHOAMI_NAME}
  namespace: traefik-system
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
  selector:
    app: whoami-${WHOAMI_NAME}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami-${WHOAMI_NAME}
  name: whoami-${WHOAMI_NAME}
  namespace: traefik-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-${WHOAMI_NAME}
  template:
    metadata:
      labels:
        app: whoami-${WHOAMI_NAME}
    spec:
      containers:
      - image: containous/whoami
        name: whoami-${WHOAMI_NAME}
        ports:
        - containerPort: 80
          name: web
