src/traefik/whoami-ingressroute/template/whoami-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-${WHOAMI_NAME}
  namespace: traefik-system
spec:
  routes:
  - kind: Rule
    #match: HostRegexp(`whoami.traefik-system.{domain:.*}`)
    match: Host(`$WHOAMI_DOMAIN`)
    services:
    - name: whoami-${WHOAMI_NAME}
      port: 80
